fix: add target blank to osquery link on hero

--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -10,17 +10,19 @@
               device management.
             </h1>
             <h6 style="max-width: 580px;" class="mx-auto mt-3 mb-0">
-              Quickly deploy <a style="color: white; text-decoration-line: underline;" href="https://osquery.io/">osquery</a> and scale your fleet to 100,000+ devices on top of a stable core technology.
+              Quickly deploy <a style="color: white; text-decoration-line: underline;"
+                href="https://osquery.io/" target="_blank">osquery</a> and scale your fleet to 100,000+ devices on
+              top of a stable core technology.
             </h6>
             <div style="max-width: 400px;" class="mt-5 mx-auto mb-0 d-sm-flex">
               <a style="max-width: 280px" class="d-sm-flex align-items-center justify-content-center btn btn-block btn-primary px-3 px-sm-5 py-3 mx-auto" href="/get-started">Try it out</a>
               <a target="_blank" style="font-size: 20px; color: white; text-decoration: none; font-weight: 700;" class="d-sm-flex align-items-center justify-content-center btn btn-link px-3 py-3" href="https://www.youtube.com/watch?v=dg1dwGQMaLw">
                 <span>Watch video</span>
                 <svg class="ml-2" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M16 32C24.8366 32 32 24.8366 32 16C32 7.16344 24.8366 0 16 0C7.16344 0 0 7.16344 0 16C0 24.8366 7.16344 32 16 32ZM11.3333 8.66667L24.2091 16.2091L11.3333 23.7516L11.3333 8.66667Z" fill="white"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M16 32C24.8366 32 32 24.8366 32 16C32 7.16344 24.8366 0 16 0C7.16344 0 0 7.16344 0 16C0 24.8366 7.16344 32 16 32ZM11.3333 8.66667L24.2091 16.2091L11.3333 23.7516L11.3333 8.66667Z" fill="white" />
                 </svg>
               </a>
-          </div>
+            </div>
             <img alt="Fleet ctl terminal and Fleet UI" src="/images/fleetctl@2x.png" style="max-width: 810px; height: auto;" class="w-100 py-3 py-sm-5 mx-auto" />
           </div>
         </div>
@@ -61,31 +63,31 @@
           </p>
         </div>
         <div style="max-width: 459px;" class="container d-flex order-lg-first px-2 px-sm-0 pb-5 pb-lg-0 m-0">
-          <img alt="Fleet UI" src="images/feature-share-with-any-team-459x312@2x.png" class="w-100 h-100 m-lg-0"/>
+          <img alt="Fleet UI" src="images/feature-share-with-any-team-459x312@2x.png" class="w-100 h-100 m-lg-0" />
         </div>
       </div>
       <div class="container d-flex flex-wrap flex-lg-nowrap justify-content-center justify-content-lg-between align-items-center px-0 pt-3 pb-5 mb-lg-4">
         <div class="container text-center text-lg-left px-0 pb-5 pb-lg-0 m-0">
-            <h3>
-              Deploy anywhere
-            </h3>
-            <p class="pb-4 mb-0">
-              Fleet is self-hosted and self-managed, and can be run within your own data centers or in the cloud.
-            </p>
+          <h3>
+            Deploy anywhere
+          </h3>
+          <p class="pb-4 mb-0">
+            Fleet is self-hosted and self-managed, and can be run within your own data centers or in the cloud.
+          </p>
           <div class="d-block align-items-center">
             <div class="d-inline-block mr-4">
-              <img title="Kubernetes" alt="kubernetes logo" src="/images/icon-kubernetes-37x36@2x.png" style="width: auto; height: 36px;" class="d-block mx-auto"/>
+              <img title="Kubernetes" alt="kubernetes logo" src="/images/icon-kubernetes-37x36@2x.png" style="width: auto; height: 36px;" class="d-block mx-auto" />
             </div>
             <div class="d-inline-block mr-4">
-              <img title="AWS" alt="aws logo" src="/images/icon-aws-60x36@2x.png" style="width: auto; height: 36px;" lass="d-block mx-auto"/>
+              <img title="AWS" alt="aws logo" src="/images/icon-aws-60x36@2x.png" style="width: auto; height: 36px;" lass="d-block mx-auto" />
             </div>
             <div class="d-inline-block">
-              <img title="Google cloud" alt="google cloud logo" src="/images/icon-google-cloud-46x36@2x.png" style="width: auto; height: 36px;" class="d-block mx-auto"/>
+              <img title="Google cloud" alt="google cloud logo" src="/images/icon-google-cloud-46x36@2x.png" style="width: auto; height: 36px;" class="d-block mx-auto" />
             </div>
           </div>
         </div>
         <div style="max-width: 489px;" class="container d-flex px-2 px-sm-0 pb-5 pb-lg-0">
-          <img alt="Fleet UI" src="images/feature-deployment-489x278@2x.png" class="w-100 h-100 m-lg-0"/>
+          <img alt="Fleet UI" src="images/feature-deployment-489x278@2x.png" class="w-100 h-100 m-lg-0" />
         </div>
       </div>
     </div>
@@ -98,35 +100,35 @@
       </div>
       <div class="log-destination-grid container d-flex flex-wrap justify-content-center p-0 pt-4 mx-auto">
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="filesystem icon" src="/images/icon-log-destination-filesystem-48x48@2x.png"/>
+          <img alt="filesystem icon" src="/images/icon-log-destination-filesystem-48x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">Filesystem</p>
         </div>
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="Splunk logo" src="/images/icon-log-destination-splunk-48x48@2x.png"/>
+          <img alt="Splunk logo" src="/images/icon-log-destination-splunk-48x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">Splunk</p>
         </div>
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="AWS Kinesis logo" src="/images/icon-log-destination-firehose-40x48@2x.png"/>
+          <img alt="AWS Kinesis logo" src="/images/icon-log-destination-firehose-40x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">AWS Kinesis</p>
         </div>
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="Google Cloud Platform PubSub logo" src="/images/icon-log-destination-pubsub-53x48@2x.png"/>
+          <img alt="Google Cloud Platform PubSub logo" src="/images/icon-log-destination-pubsub-53x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">GCP PubSub</p>
         </div>
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="AWS Lambda logo" src="/images/icon-log-destination-lambda-48x48@2x.png"/>
+          <img alt="AWS Lambda logo" src="/images/icon-log-destination-lambda-48x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">AWS Lambda</p>
         </div>
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="Elastic logo" src="/images/icon-log-destination-elastic-48x48@2x.png"/>
+          <img alt="Elastic logo" src="/images/icon-log-destination-elastic-48x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">Elastic</p>
         </div>
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="Sumo Logic logo" src="/images/icon-log-destination-sumo-48x48@2x.png"/>
+          <img alt="Sumo Logic logo" src="/images/icon-log-destination-sumo-48x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">Sumo Logic</p>
         </div>
         <div class="log-destination d-flex mx-1 mx-sm-2 mb-4">
-          <img alt="Graylog logo" src="/images/icon-log-destination-graylog-48x48@2x.png"/>
+          <img alt="Graylog logo" src="/images/icon-log-destination-graylog-48x48@2x.png" />
           <p class="font-weight-bold m-0 ml-3">Graylog</p>
         </div>
       </div>
@@ -134,8 +136,7 @@
         <a
           style="max-width: 220px"
           class="btn btn-block btn-md btn-primary mx-4"
-          href="/get-started"
-        >
+          href="/get-started">
           Try it out
         </a>
         <a
@@ -143,8 +144,7 @@
           class="btn btn-block btn-lg btn-white pl-0 m-0"
           purpose="animated-arrow-button"
           target="_blank"
-          href="https://calendly.com/fleetdm/demo"
-          >Schedule a demo
+          href="https://calendly.com/fleetdm/demo">Schedule a demo
         </a>
       </div>
     </div>
@@ -159,7 +159,7 @@
       <div class="tweets d-flex flex-wrap justify-content-center align-items-start px-2 pt-3 pt-lg-5 pb-5 mx-auto">
         <div purpose="top-row" class="tweet container">
           <div class="mb-4">
-            <a href="https://twitter.com/osquery"><img width="140" height="36" alt="osquery logo" src="/images/social-proof-logo-osquery-140x36@2x.png"/></a>
+            <a href="https://twitter.com/osquery"><img width="140" height="36" alt="osquery logo" src="/images/social-proof-logo-osquery-140x36@2x.png" /></a>
           </div>
           <p class="pb-2 mb-1">It’s great to see the new release of Fleet containing some really cool new features that make <a href="https://twitter.com/osquery">@osquery</a> much more usable in practical environments. I’m really impressed with the work that <a href="https://twitter.com/thezachw">@thezachw</a> and crew are doing at <a href="https://twitter.com/fleetctl">@fleetctl</a>.</p>
           <div class="row px-3 pt-2">
@@ -171,7 +171,7 @@
         </div>
         <div purpose="top-row" class="tweet container">
           <div class="mb-4">
-            <a href="https://twitter.com/Wayfair"><img width="136" height="32" alt="Wayfair logo" src="/images/social-proof-logo-wayfair-136x32@2x.png"/></a>
+            <a href="https://twitter.com/Wayfair"><img width="136" height="32" alt="Wayfair logo" src="/images/social-proof-logo-wayfair-136x32@2x.png" /></a>
           </div>
           <p class="pb-2 mb-1"><a href="https://twitter.com/hashtag/osquery">#osquery</a> is one of the best tools out there and <a href="https://twitter.com/hashtag/fleetdm">#fleetdm</a> makes it even better. Highly recommend it if you want to monitor, detect and investigate threats on a scale and also for infra/sys admin.</p>
           <p>I have used it on 15k servers and it’s really scalable.</p>
@@ -179,12 +179,12 @@
             <div>
               <p class="font-weight-bold m-0">Ahmed Elshaer</p>
               <p class="m-0">DFIR, Blue Teaming, SecOps <a href="https://twitter.com/Wayfair">@wayfair</a></p>
-              </div>
+            </div>
           </div>
         </div>
         <div purpose="top-row" class="tweet container">
           <div class="mb-4">
-            <a href="https://twitter.com/SnowflakeDB"><img width="153" height="38" alt="Snowflake logo" src="/images/social-proof-logo-snowflake-153x38@2x.png"/></a>
+            <a href="https://twitter.com/SnowflakeDB"><img width="153" height="38" alt="Snowflake logo" src="/images/social-proof-logo-snowflake-153x38@2x.png" /></a>
           </div>
           <p class="pb-2 mb-1">My DevOps team members got Fleet set up this week, w/ data streaming via firehose to S3 buckets. This is pretty dang amazing being able to stream real data this fast. I’m very excited to see what we can build out with this. Enrolled a few boxes & streaming that sweet data.</p>
           <div class="row px-3 pt-2">
@@ -196,7 +196,7 @@
         </div>
         <div purpose="middle-row" class="tweet container">
           <div class="mb-4">
-            <a href="https://twitter.com/Uber"><img width="87" height="38" alt="Uber logo" src="/images/social-proof-logo-uber-87x38@2x.png"/></a>
+            <a href="https://twitter.com/Uber"><img width="87" height="38" alt="Uber logo" src="/images/social-proof-logo-uber-87x38@2x.png" /></a>
           </div>
           <p class="pb-2 mb-1">Exciting. This is a team that listens to feedback.</p>
           <div class="row px-3 pt-2">
@@ -208,7 +208,7 @@
         </div>
         <div purpose="middle-row" class="tweet container">
           <div class="mb-4">
-            <a href="https://twitter.com/Square"><img width="131" height="38" alt="Square logo" src="/images/social-proof-logo-square-131x38@2x.png"/></a>
+            <a href="https://twitter.com/Square"><img width="131" height="38" alt="Square logo" src="/images/social-proof-logo-square-131x38@2x.png" /></a>
           </div>
           <p class="pb-2 mb-1">Mad props to how easy making a deploy pkg of Orbit was. I wish everyone made stuff that easy.</p>
           <div class="row px-3 pt-2">
@@ -220,7 +220,7 @@
         </div>
         <div purpose="middle-row" class="tweet container">
           <div class="mb-4">
-            <a href="https://twitter.com/atlassian"><img width="162" height="20" alt="Atlassian logo" src="/images/social-proof-logo-atlassian-162x20@2x.png"/></a>
+            <a href="https://twitter.com/atlassian"><img width="162" height="20" alt="Atlassian logo" src="/images/social-proof-logo-atlassian-162x20@2x.png" /></a>
           </div>
           <p class="pb-2 mb-1"><a href="https://twitter.com/hashtag/fleet">#Fleet</a>’s come a long way - to now being the top open-source <a href="https://twitter.com/hashtag/fleet">#osquery</a> manager. Just in the past 6 months.</p>
           <div class="row px-3 pt-2">
@@ -232,7 +232,7 @@
         </div>
         <div purpose="bottom-row" class="tweet container mr-0 mr-xl-2">
           <div class="mb-4">
-            <a href="https://twitter.com/comcast"><img width="107" height="38" alt="Comcast logo" src="/images/social-proof-logo-comcast-107x38.png"/></a>
+            <a href="https://twitter.com/comcast"><img width="107" height="38" alt="Comcast logo" src="/images/social-proof-logo-comcast-107x38.png" /></a>
           </div>
           <p class="pb-2 mb-1">With the power of osquery, you need a scalable & resilient platform to manage your workloads. Fleet is the "just right" open-source, enterprise grade solution.</p>
           <div class="row px-3 pt-2">
@@ -244,7 +244,7 @@
         </div>
         <div purpose="bottom-row" class="tweet container ml-0 ml-xl-2">
           <div class="mb-4">
-            <a href="https://twitter.com/versia"><img width="90" height="38" alt="Versia logo" src="/images/social-proof-logo-versia-90x38@2x.png"/></a>
+            <a href="https://twitter.com/versia"><img width="90" height="38" alt="Versia logo" src="/images/social-proof-logo-versia-90x38@2x.png" /></a>
           </div>
           <p class="pb-2 mb-1">Thanks <a href="https://twitter.com/fleetctl">@fleetctl</a> for such an awesome tool to manage <a href="https://twitter.com/osquery">@osquery</a></p>
           <div class="row px-3 pt-2">
@@ -266,8 +266,7 @@
           <a
             style="max-width: 220px"
             class="btn btn-block btn-md btn-primary mx-4"
-            href="/get-started"
-          >
+            href="/get-started">
             Try it out
           </a>
           <a
@@ -275,8 +274,7 @@
             class="btn btn-block btn-lg btn-white pl-0 m-0"
             purpose="animated-arrow-button"
             target="_blank"
-            href="https://calendly.com/fleetdm/demo"
-            >Schedule a demo
+            href="https://calendly.com/fleetdm/demo">Schedule a demo
           </a>
         </div>
       </div>
