--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -147,7 +147,7 @@
               <div class="flex-column">
                 <a href="/get-started" class="d-block pr-md-5 pr-sm-3 pb-2">Get started</a>
                 <a href="/docs" class="d-block pr-md-5 pr-sm-3 pb-2">Docs</a>
-                <a href="/queries" class="d-block pr-md-5 pr-sm-3 pb-2">Query Library</a>
+                <a href="/queries" class="d-block pr-md-5 pr-sm-3 pb-2">Query library</a>
                 <a href="/transparency" class="d-block pr-md-5 pr-sm-3 pb-2 pb-xl-0">Transparency</a>
               </div>
               <div class="flex-column">
