Replace Nunito with Nunito Sans

--- a/website/assets/styles/pages/docs/basic-documentation.less
+++ b/website/assets/styles/pages/docs/basic-documentation.less
@@ -295,7 +295,7 @@
       [purpose='docs-nav-button'] {
         color: @core-fleet-black;
         background-color: transparent;
-        font-family: 'Nunito';
+        font-family: 'Nunito Sans';
         font-weight: 400;
         font-size: 16px;
         padding: 0;
