--- a/website/assets/styles/pages/query-detail.less
+++ b/website/assets/styles/pages/query-detail.less
@@ -7,7 +7,7 @@
   }
 
   h6 {
-    font-family: 'Nunito';
+    font-family: 'Nunito Sans';
     font-size: 16px;
     line-height: 25px;
     word-wrap: break-word;
