--- a/website/views/layouts/layout-email.ejs
+++ b/website/views/layouts/layout-email.ejs
@@ -1,5 +1,5 @@
 <% /* Default layout for email templates */ %>
-<div style="width: 100%; font-family: 'Nunito', sans-serif; box-sizing: border-box; padding-bottom: 25px; margin: 0;">
+<div style="width: 100%; font-family: 'Nunito Sans', sans-serif; box-sizing: border-box; padding-bottom: 25px; margin: 0;">
   <div style="color: #000; font-size: 16px; box-sizing: border-box; padding: 25px; width: 100%; max-width: 600px; margin-left: auto; margin-right: auto;">
     <div style="background: transparent; text-align: left;">
       <a href="https://fleetdm.com"><img style="display: inline-block; width: 162px; height: 92px; width: auto;" alt="Logo" src="https://fleetdm.com/images/logo-blue-162x92@2x.png"/></a>
