fix: make osquery website link on hero open in a new tab

--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -10,7 +10,7 @@
               device management.
             </h1>
             <h6 style="max-width: 580px;" class="mx-auto mt-3 mb-0">
-              Quickly deploy <a style="color: white; text-decoration-line: underline;" href="https://osquery.io/">osquery</a> and scale your fleet to 100,000+ devices on top of a stable core technology.
+              Quickly deploy <a target="_blank" style="color: white; text-decoration-line: underline;" href="https://osquery.io/">osquery</a> and scale your fleet to 100,000+ devices on top of a stable core technology.
             </h6>
             <div style="max-width: 400px;" class="mt-5 mx-auto mb-0 d-sm-flex">
               <a style="max-width: 280px" class="d-sm-flex align-items-center justify-content-center btn btn-block btn-primary px-3 px-sm-5 py-3 mx-auto" href="/get-started">Try it out</a>
