fixed style for connection line on activity feed

--- a/frontend/pages/Homepage/cards/ActivityFeed/_styles.scss
+++ b/frontend/pages/Homepage/cards/ActivityFeed/_styles.scss
@@ -16,6 +16,10 @@
     flex-direction: row;
     align-items: center;
     padding-bottom: $pad-large;
+
+    .avatar-wrapper {
+      position: relative;
+    }
   }
 
   &__block:before {
