--- a/website/views/pages/get-started.ejs
+++ b/website/views/pages/get-started.ejs
@@ -4,7 +4,7 @@
     <p>Try out a preview of Fleet and osquery on your laptop before deploying at scale by following below.</p>
     <p>You can also <a href="/docs/deploying">deploy to a server</a>.</p>
     <div class="pt-4 pb-4">
-      <h2 class="mb-3">1. Install Node and Docker (optional)</h2>
+      <h2 class="mb-3">1. Install Node (optional) and Docker</h2>
       <p>The quickest way to install Fleet is with Node.js and Docker.</p>
       <div class="d-sm-flex">
         <a href="https://nodejs.org/en/download/" target="_blank"
