--- a/website/views/pages/get-started.ejs
+++ b/website/views/pages/get-started.ejs
@@ -35,7 +35,7 @@
       </div>
       <p class="mb-0"><img alt="A small circle with an I inside of it"
           style="width: 16px; display: inline; margin-right: 8px; margin-bottom: 3px"
-          src="/images/info-16x16@2x.png">Windows users can omit <code>sudo</code> .</p>
+          src="/images/info-16x16@2x.png">Windows users can omit <code>sudo</code>, and should run the command in <code>Cmd</code>/<code>PowerShell</code> as administrators.</p>
     </div>
     <div style="padding-top: 60px;">
       <h2 class="mb-3">3. Log in to Fleet</h2>
