platform page and images

--- a/website/assets/styles/importer.less
+++ b/website/assets/styles/importer.less
@@ -27,6 +27,7 @@
 @import 'pages/homepage.less';
 @import 'pages/get-started.less';
 @import 'pages/pricing.less';
+@import 'pages/platform.less';
 @import 'pages/dashboard/welcome.less';
 @import 'pages/entrance/signup.less';
 @import 'pages/entrance/confirmed-email.less';
