add hrefs and link styles

--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -22,6 +22,9 @@
     bottom: 2px;
     margin-left: 8px;
   }
+  a & a:active{
+    text-decoration: none;
+  }
 
   [purpose="platform-banner-background"] {
     background: linear-gradient(100.68deg, #1F1D42 0%, #00FFF0 100%);
@@ -117,6 +120,8 @@
       a {
         position: relative;
         bottom: 5px;
+        color: #192147;
+        font-weight: 700;
       }
       img {
         display: inline;
