--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -7,12 +7,12 @@
           <h4>One agent, any platform, up-to-the-minute data</h4>
           <p>Fleet allows you to harness the power of osquery to stream accurate, real-time data from all of your devices. It’s easy to deploy at scale, granular and open source.</p>
           <div style="padding-bottom: 140px;" class="flex-row row justify-content-around mx-md-0 mx-4">
-            <div class="btn btn-primary col-md-6 col-12">Try it out</div>
-            <a class="btn col-md-6 col-12">Schedule a demo <img class="d-inline" src="/images/platform/icon-right-arrow-white-16x16@2x.png"></a>
+            <a href="/get-started" class="btn btn-primary col-md-6 col-12">Try it out</a>
+            <a style="color:#F9FAFC;" href="https://calendly.com/fleetdm/demo" target="_blank" class="btn col-md-6 col-12">Schedule a demo <img class="d-inline" src="/images/platform/icon-right-arrow-white-16x16@2x.png"></a>
           </div>
         </div>
         <div class="col-xl-7 col-lg col-4"></div>
-        <div class="flex-col" purpose="platform-banner-hero"><img src="/images/platform/platform-hero-x@2x.png"></div>
+        <div class="flex-col" purpose="platform-banner-hero"><img src="/images/platform/platform-hero-660x430@2x.png"></div>
         <div purpose="platform-curve">
           <svg width="803" height="116" viewBox="0 0 803 116" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M765.665 116H0V0C270.295 89.7291 601.721 114.209 765.665 116H803C791.804 116.141 779.315 116.149 765.665 116Z" fill="white"/>
@@ -178,7 +178,7 @@
         <img class="mx-auto" style="width: 40px; height: 40px; margin-bottom: 16px;" src="/images/logo-slack-24x24@2x.png">
         <h3>Join the community</h3>
         <p>Join the conversation or ask for help in our Slack channel.</p>
-        <a href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank" class="mt-auto">Join on Slack<img src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
+        <a  href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank" class="mt-auto">Join on Slack<img src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
       </div>
     </div>
   </div>
