Remove asterisks for release features

--- a/website/views/pages/pricing.ejs
+++ b/website/views/pages/pricing.ejs
@@ -497,7 +497,7 @@
                         src="/images/ellipse-6x6@2x.png"
                         style="width: 6px; height: 6px; margin-top: 09.6px"
                       />
-                      <p class="ml-2 my-0">Human-to-device mapping*†</p>
+                      <p class="ml-2 my-0">Human-to-device mapping†</p>
                     </div>
                     <div class="col-2">
                       <img
@@ -744,7 +744,7 @@
                         src="/images/ellipse-6x6@2x.png"
                         style="width: 6px; height: 6px; margin-top: 09.6px"
                       />
-                      <p class="ml-2 my-0">Query performance monitoring*</p>
+                      <p class="ml-2 my-0">Query performance monitoring</p>
                     </div>
                     <div class="col-2">
                       <img
@@ -797,7 +797,7 @@
                         style="width: 6px; height: 6px; margin-top: 09.6px"
                       />
                       <p class="ml-2 my-0">
-                        Detect and surface issues with devices*†
+                        Detect and surface issues with devices†
                       </p>
                     </div>
                     <div class="col-2">
