--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -3,6 +3,7 @@
   h2 {
     font-size: 24px;
     line-height: 32px;
+    margin-bottom: 24px;
   }
   h3 {
     font-size: 20px;
@@ -35,6 +36,7 @@
     max-width: 100%;
     filter: drop-shadow(0px 3.85401px 24.0876px rgba(0, 0, 0, 0.15));
     border-radius: 4.78295px;
+    margin-top: -15px;
   }
 
   [purpose="platform-content"] {
@@ -88,22 +90,32 @@
     height: 520px;
     [purpose="platform-banner-text"] {
       max-width: 544px;
+      z-index: 2;
+      padding-bottom: 140px;
     }
     [purpose="platform-banner-hero"] {
       img {
         display: inline-block;
-        width: 660px;
+        height: 100%;
         position: absolute;
         right: -25px;
-        bottom: 0px;
+        bottom: -90px;
         z-index: 1;
       }
+      svg {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        right: 0;
+        z-index: 0;
+      }
     }
-    [purpose="platform-curve"] {
+    [purpose="banner-curve"] {
       z-index: 2;
       position: absolute;
       left: -25px;
-      bottom: 0px;
+      bottom: -1px;
     }
   }
   [purpose="next-steps"] {
@@ -149,6 +161,32 @@
     }
   }
 
+  @media (min-width: 1199px) {
+
+    [purpose="platform-content"] {
+      padding-top: 100px;
+      max-width: 1400px;
+      padding-left: 100px;
+      padding-right: 100px;
+    }
+
+    [purpose="platform-banner"] {
+
+      [purpose="platform-banner-hero"] {
+        img {
+          display: inline-block;
+          // height: 100%;
+          width: 850px;
+          position: relative;
+          right: 0px;
+          top: 0px;
+          z-index: 1;
+          bottom: unset;
+        }
+      }
+    }
+  }
+
   @media (max-width: 1199px) {
 
     [purpose="platform-banner"] {
@@ -159,21 +197,41 @@
       }
       [purpose="platform-banner-hero"] {
         img {
-          width: 660px;
+          width: 850px;
           position: relative;
-          left: 85%;
-          bottom: 380px;
+          right: 0;
+          top: 0;
           z-index: 1;
         }
       }
     }
-  }
-
-  @media (max-width: 989px) {
     [purpose="platform-content"] {
       padding-top: 80px;
       padding-left: 40px;
       padding-right: 40px;
+    }
+  }
+
+  @media (max-width: 991px) {
+    [purpose="platform-banner"] {
+      padding: 60px 40px 0px 40px;
+      color:#F9FAFC;
+      position: relative;
+      height: 740px;
+
+      [purpose="platform-banner-text"] {
+        max-width: 520px;
+        padding-bottom: 80px;
+      }
+      [purpose="platform-banner-hero"] {
+        img {
+          position: relative;
+          width: 100%;
+          right: -45px;
+          top: 0px;
+
+        }
+      }
     }
   }
 
@@ -205,6 +263,7 @@
       padding-top: 60px;
       margin-left: auto;
       margin-right: auto;
+      margin-top: -15px;
     }
     [purpose="platform-content"] {
       padding-top: 80px;
@@ -218,28 +277,31 @@
       padding: 60px 40px 0px 40px;
       color:#F9FAFC;
       position: relative;
-      height: 740px;
+      height: 780px;
 
       [purpose="platform-banner-text"] {
         max-width: 520px;
+        padding-bottom: 60px;
       }
       [purpose="platform-banner-hero"] {
         img {
           position: relative;
-          right: -45px;
-          left: unset;
-          bottom: 110px;
-          width: 90vw;
+          right: -25px;
+          top: 0px;
+          width: 100%;
         }
       }
-
     }
+
   }
 
   @media (max-width: 576px) {
     h1 {
-      font-size: 28px;
+      font-size: 26px;
       line-height: 54px;
+    }
+    [purpose="platform-section"] {
+      padding-top: 60px;
     }
     [purpose="platform-content"] {
       padding-top: 0px;
@@ -251,18 +313,10 @@
       padding-top: 60px;
       color:#F9FAFC;
       position: relative;
-      height: 740px;
-
+      height: 700px;
       [purpose="platform-banner-text"] {
-        min-width: auto;
-      }
-      [purpose="platform-banner-hero"] {
-        img {
-          position: relative;
-          left: 0px;
-          bottom: 82px;
-          width: 110%;
-        }
+        max-width: 520px;
+        padding-bottom: 40px;
       }
     }
 
@@ -276,6 +330,9 @@
       border-radius: 16px;
       color: #F9FAFC;
       overflow: hidden;
+      p {
+        margin-block-end: 16px;
+      }
       svg {
         position: fixed;
         top: 0px;
@@ -291,7 +348,7 @@
         display: inline;
         height: 120px;
         z-index:1;
-        top: 0px;
+        top: -20px;
         left: 0px;
         margin-left: auto;
         margin-right: auto;
@@ -301,10 +358,10 @@
     [purpose="platform-logos"] {
       img {
         height: auto;
-        width: 110px;
+        width: 150px;
+        margin: -10px;
         display: inline;
       }
     }
   }
-
 }
