--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -23,34 +23,34 @@
     bottom: 2px;
     margin-left: 8px;
   }
-  a & a:active{
+  a & a:active & a:hover {
     text-decoration: none;
   }
 
-  [purpose="platform-banner-background"] {
+  [purpose='platform-banner-background'] {
     background: linear-gradient(100.68deg, #1F1D42 0%, #00FFF0 100%);
     overflow: hidden;
   }
 
-  [purpose="platform-feature-image"]{
+  [purpose='platform-feature-image'] {
     max-width: 100%;
     filter: drop-shadow(0px 3.85401px 24.0876px rgba(0, 0, 0, 0.15));
     border-radius: 4.78295px;
     margin-top: -15px;
   }
 
-  [purpose="platform-content"] {
+  [purpose='platform-content'] {
     padding-top: 100px;
     max-width: 1400px;
     padding-left: 100px;
     padding-right: 100px;
   }
 
-  [purpose="platform-section"] {
+  [purpose='platform-section'] {
     padding-top: 140px;
   }
 
-  [purpose="platform-user-story"]{
+  [purpose='platform-user-story'] {
     margin-top: 40px;
     padding: 30px 24px;
     max-height: 180px;
@@ -61,7 +61,7 @@
     color: #F9FAFC;
     overflow: hidden;
     a {
-      font-weight: 700
+      font-weight: 700;
     }
     svg {
       position: fixed;
@@ -77,23 +77,23 @@
       position: fixed;
       display: inline;
       height: 120px;
-      z-index:1;
+      z-index: 1;
       left: 60px;
       bottom: 30px;
     }
   }
 
-  [purpose="platform-banner"] {
-    color:#F9FAFC;
+  [purpose='platform-banner'] {
+    color: #F9FAFC;
     position: relative;
     padding: 100px 80px 0px 80px;
     height: 520px;
-    [purpose="platform-banner-text"] {
+    [purpose='platform-banner-text'] {
       max-width: 544px;
       z-index: 2;
       padding-bottom: 140px;
     }
-    [purpose="platform-banner-hero"] {
+    [purpose='platform-banner-hero'] {
       img {
         display: inline-block;
         height: 100%;
@@ -102,23 +102,15 @@
         bottom: -90px;
         z-index: 1;
       }
-      svg {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        top: 0;
-        right: 0;
-        z-index: 0;
-      }
     }
-    [purpose="banner-curve"] {
+    [purpose='banner-curve'] {
       z-index: 2;
       position: absolute;
       left: -25px;
       bottom: -1px;
     }
   }
-  [purpose="next-steps"] {
+  [purpose='next-steps'] {
     padding-top: 80px;
     padding-bottom: 120px;
     .card {
@@ -128,12 +120,12 @@
       box-shadow: 1px 2px 2px rgba(197, 199, 209, 0.2);
       border-radius: 16px;
       padding: 32px;
-      border-radius: 16px;
       a {
         position: relative;
         bottom: 5px;
         color: #192147;
         font-weight: 700;
+        text-decoration: none;
       }
       img {
         display: inline;
@@ -141,7 +133,7 @@
     }
   }
 
-  [purpose="platform-logos"] {
+  [purpose='platform-logos'] {
     padding-top: 24px;
     img {
       height: 92px;
@@ -150,7 +142,7 @@
     }
   }
 
-  [purpose="platform-bullet-list"] {
+  [purpose='platform-bullet-list'] {
     p {
       padding-left: 24px;
       text-indent: -24px;
@@ -163,19 +155,18 @@
 
   @media (min-width: 1199px) {
 
-    [purpose="platform-content"] {
+    [purpose='platform-content'] {
       padding-top: 100px;
       max-width: 1400px;
       padding-left: 100px;
       padding-right: 100px;
     }
 
-    [purpose="platform-banner"] {
+    [purpose='platform-banner'] {
 
-      [purpose="platform-banner-hero"] {
+      [purpose='platform-banner-hero'] {
         img {
           display: inline-block;
-          // height: 100%;
           width: 850px;
           position: relative;
           right: 0px;
@@ -189,13 +180,13 @@
 
   @media (max-width: 1199px) {
 
-    [purpose="platform-banner"] {
-      color:#F9FAFC;
+    [purpose='platform-banner'] {
+      color: #F9FAFC;
       position: relative;
-      [purpose="platform-banner-text"] {
+      [purpose='platform-banner-text'] {
         max-width: 544px;
       }
-      [purpose="platform-banner-hero"] {
+      [purpose='platform-banner-hero'] {
         img {
           width: 850px;
           position: relative;
@@ -205,7 +196,7 @@
         }
       }
     }
-    [purpose="platform-content"] {
+    [purpose='platform-content'] {
       padding-top: 80px;
       padding-left: 40px;
       padding-right: 40px;
@@ -213,23 +204,22 @@
   }
 
   @media (max-width: 991px) {
-    [purpose="platform-banner"] {
+    [purpose='platform-banner'] {
       padding: 60px 40px 0px 40px;
-      color:#F9FAFC;
+      color: #F9FAFC;
       position: relative;
       height: 740px;
 
-      [purpose="platform-banner-text"] {
+      [purpose='platform-banner-text'] {
         max-width: 520px;
         padding-bottom: 80px;
       }
-      [purpose="platform-banner-hero"] {
+      [purpose='platform-banner-hero'] {
         img {
           position: relative;
           width: 100%;
-          right: -45px;
+          right: -25px;
           top: 0px;
-
         }
       }
     }
@@ -237,7 +227,7 @@
 
   @media (max-width: 767px) {
 
-    [purpose="platform-user-story"]{
+    [purpose='platform-user-story'] {
       max-height: 180px;
       margin-top: 40px;
       // padding: 31px 24px;
@@ -252,38 +242,38 @@
         margin-block-end: 4px;
       }
     }
-    [purpose="next-steps"] {
+    [purpose='next-steps'] {
       .card {
         padding: 32px 60px;
         margin-bottom: 16px;
       }
     }
 
-    [purpose="platform-feature-image"]{
+    [purpose='platform-feature-image'] {
       padding-top: 60px;
       margin-left: auto;
       margin-right: auto;
       margin-top: -15px;
     }
-    [purpose="platform-content"] {
+    [purpose='platform-content'] {
       padding-top: 80px;
       padding-left: 120px;
       padding-right: 120px;
     }
-    [purpose="platform-section"] {
+    [purpose='platform-section'] {
       padding-top: 80px;
     }
-    [purpose="platform-banner"] {
+    [purpose='platform-banner'] {
       padding: 60px 40px 0px 40px;
-      color:#F9FAFC;
+      color: #F9FAFC;
       position: relative;
       height: 780px;
 
-      [purpose="platform-banner-text"] {
+      [purpose='platform-banner-text'] {
         max-width: 520px;
         padding-bottom: 60px;
       }
-      [purpose="platform-banner-hero"] {
+      [purpose='platform-banner-hero'] {
         img {
           position: relative;
           right: -25px;
@@ -300,27 +290,39 @@
       font-size: 26px;
       line-height: 54px;
     }
-    [purpose="platform-section"] {
+    [purpose='platform-banner-background'] {
+      background: linear-gradient(141.32deg, #1F1D42 0%, #00FFF0 91.41%);;
+      overflow: hidden;
+    }
+    [purpose='platform-section'] {
       padding-top: 60px;
     }
-    [purpose="platform-content"] {
-      padding-top: 0px;
+    [purpose='platform-content'] {
+      padding-top: 20px;
       padding-left: 40px;
       padding-right: 40px;
     }
 
-    [purpose="platform-banner"] {
+    [purpose='platform-banner'] {
       padding-top: 60px;
-      color:#F9FAFC;
+      color: #F9FAFC;
       position: relative;
       height: 700px;
-      [purpose="platform-banner-text"] {
+      [purpose='platform-banner-text'] {
         max-width: 520px;
         padding-bottom: 40px;
       }
+      [purpose='platform-banner-hero'] {
+        img {
+          position: relative;
+          right: 11px;
+          top: -10px;
+          width: 110%;
+        }
+      }
     }
 
-    [purpose="platform-user-story"]{
+    [purpose='platform-user-story'] {
       margin-top: 40px;
       padding: 31px 24px;
       min-height: 375px;
@@ -347,7 +349,7 @@
         position: relative;
         display: inline;
         height: 120px;
-        z-index:1;
+        z-index: 1;
         top: -20px;
         left: 0px;
         margin-left: auto;
@@ -355,7 +357,7 @@
       }
     }
 
-    [purpose="platform-logos"] {
+    [purpose='platform-logos'] {
       img {
         height: auto;
         width: 150px;
