fix new-password styes, fix broken links on unauthorized view

--- a/website/views/498.ejs
+++ b/website/views/498.ejs
@@ -3,8 +3,8 @@
     <h1>Sorry, that link is expired, or<br class="d-none d-sm-inline" /><span class="d-inline d-sm-none">&nbsp;</span>it has already been used.</h1>
     <hr/>
     <div>
-      <p>Need further help accessing your account?<br class="d-none d-sm-inline" /><span class="d-inline d-sm-none">&nbsp;</span>Please <a href="/contact">contact support</a> or request a new <a href="/password/forgot">password reset.</a></p>
-      <a class="btn btn-lg btn-outline-dark" href="/password/forgot">Reset password</a>
+      <p>Need further help accessing your account?<br class="d-none d-sm-inline" /><span class="d-inline d-sm-none">&nbsp;</span>Please <a href="/contact">contact support</a> or request a new <a href="/customers/forgot-password">password reset.</a></p>
+      <a class="btn btn-info" href="/customers/forgot-password">Reset password</a>
     </div>
   </div>
 </div>
