--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -72,10 +72,7 @@
     <div purpose="platform-section">
       <h2 class="text-md-center">Trust but verify</h2>
       <div purpose="platform-bullet-list" class="text-md-center text-left">
-        <span><p>Interpret incidents accurately and make decisions using real device data.</p></span>
-        <p>Notify your team when a CVE is detected, or if a user changes relevant settings.</p>
-        <p>Investigate computers in real-time, asking arbitrary questions.</p>
-        <p>Perform custom remediation actions using osquery extensions.</p>
+        <p>Verify whether vulnerable software was actually patched / verify changes made with other systems</p>
       </div>
       <div purpose="platform-logos" class="flex-row flex-wrap flex-sm-nowrap row justify-content-center">
         <img src="/images/platform/icon-tenable-112x92@2x.png" alt="Tenable">
