reorder topnav, adjust mobile styles

--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -287,7 +287,7 @@
 
   @media (max-width: 576px) {
     h1 {
-      font-size: 26px;
+      font-size: 28px;
       line-height: 54px;
     }
     [purpose='platform-banner-background'] {
@@ -315,8 +315,8 @@
       [purpose='platform-banner-hero'] {
         img {
           position: relative;
-          right: 11px;
-          top: -10px;
+          right: 0px;
+          top: 0px;
           width: 110%;
         }
       }
@@ -356,7 +356,6 @@
         margin-right: auto;
       }
     }
-
     [purpose='platform-logos'] {
       img {
         height: auto;
@@ -364,6 +363,11 @@
         margin: -10px;
         display: inline;
       }
+    }
+  }
+  @media (max-width: 329px) {
+    h1 {
+      font-size: 26px;
     }
   }
 }
