--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -7,7 +7,7 @@
           <h1>Developer-friendly IT</h1>
           <h4>One agent, any platform, up-to-the-minute data</h4>
           <p>Fleet allows you to harness the power of osquery to stream accurate, real-time data from all of your devices. It’s easy to deploy at scale, granular and open source.</p>
-          <div class="flex-row row justify-content-around mx-md-0 mx-4">
+          <div class="flex-row row justify-content-around mx-md-0 mx-4 pt-2">
             <a href="/get-started" class="btn btn-primary col-md-6 col-12">Try it out</a>
             <a style="color:#F9FAFC;" href="https://calendly.com/fleetdm/demo" target="_blank" class="btn col-md-6 col-12">Schedule a demo <img class="d-inline" alt="A small white arrow pointing to the right" src="/images/platform/icon-right-arrow-white-16x16@2x.png"></a>
           </div>
