add href, fix padding

--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -51,7 +51,7 @@
   }
 
   [purpose='platform-user-story'] {
-    margin-top: 40px;
+    margin-top: 80px;
     padding: 30px 24px;
     max-height: 180px;
     max-width: 900px;
@@ -61,7 +61,9 @@
     color: #F9FAFC;
     overflow: hidden;
     a {
+      color: #F9FAFC;
       font-weight: 700;
+      text-decoration: none;
     }
     svg {
       position: fixed;
