--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -158,7 +158,7 @@
         <div class="col-12 col-sm-7 col-md-8 flex-grow-1 justify-content-end align-self-end pt-sm-0 pl-sm-4 pl-md-3 pr-sm-0">
           <h3>Fleet user story</h3>
           <p>Jason Walton gives insight into how his team uses Fleet and osquery at Schrödinger.</p>
-          <a class="mt-3 mt-sm-0">Read more <img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
+          <a href="https://blog.fleetdm.com/fleet-user-stories-200c94ca8a10" class="mt-3 mt-sm-0">Read more <img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
         </div>
       </div>
     </div>
