a couple of style tweaks
• Reduced space between sections.
• Center-aligned images and text vertically.

--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -53,7 +53,7 @@
     </div>
 
     <div purpose="platform-section">
-      <div class="flex-row row justify-content-around">
+      <div class="d-flex align-items-center flex-row row justify-content-around">
         <div class="col-md-6 col-12">
           <h2>Respond to incidents before they become emergencies</h2>
           <div purpose="platform-bullet-list">
@@ -84,7 +84,7 @@
     </div>
 
     <div purpose="platform-section">
-      <div class="flex-row row justify-content-around">
+      <div class="d-flex align-items-center flex-row row justify-content-around">
         <div class="col-md-6 col-12 px-0 px-sm-auto order-last order-md-first">
           <img style="transform-origin: bottom left;" purpose="platform-feature-image" alt="See up-to-date information about devices" src="/images/platform/platform-feature-image-2-598x410@2x.png">
         </div>
@@ -103,7 +103,7 @@
     </div>
 
     <div purpose="platform-section">
-      <div class="flex-row row justify-content-around">
+      <div class="d-flex align-items-center flex-row row justify-content-around">
         <div class="col-md-6 col-12">
           <h2>Meet compliance goals</h2>
           <div purpose="platform-bullet-list">
