style fixes iOS

--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -68,21 +68,21 @@
     svg {
       position: absolute;
       left: -50px;
-      top: -35px;
+      top: -30px;
       bottom: 0px;
-      overflow: hidden;
+      overflow: visible;
       vertical-align: middle;
       z-index: -1;
       width: 367px;
       height: 180px;
     }
     img:not(a > img) {
-      position: fixed;
+      position: absolute;
       display: inline;
       height: 120px;
       z-index: 1;
       left: 60px;
-      bottom: 30px;
+      bottom: 0;
     }
   }
 
@@ -342,7 +342,7 @@
         position: absolute;
         top: -20px;
         left: 0px;
-        overflow: overlay;
+        overflow: visible;
         vertical-align: middle;
         z-index: -1;
         width: 100%;
